--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1,82 +1,128 @@
-#home .menu a, #home .logo h3, #home .titles, #all-product li, .product p {
+#home nav .nav-item, #home nav .navbar-brand, #home .titles, #all-product li, .product p {
   font-family: 'Roboto';
   font-size: 15px;
   color: #333333;
   line-height: 18px;
   font-weight: 400px; }
 
-#home img {
-  position: relative; }
-#home .container {
-  position: absolute;
-  top: 0;
-  left: 8%; }
-#home .menu {
-  margin: 0;
-  padding: 0;
-  display: block; }
-  #home .menu li {
-    float: left;
-    display: block;
-    margin: 0 20px; }
-  #home .menu a {
-    text-decoration: none;
-    text-transform: uppercase; }
-#home .hat {
+#home {
+  background: url(../img/bg_big.jpg) no-repeat;
+  background-position: 50%;
   width: 100%;
-  height: 60px;
-  padding-top: 30px; }
-#home .logo {
-  float: left; }
-  #home .logo h3 {
-    text-transform: uppercase; }
-#home nav {
-  float: right; }
-#home .titles {
-  text-align: center;
-  text-transform: uppercase;
-  margin-top: 235px; }
-#home h1 {
-  font-size: 70px;
-  line-height: 84px; }
+  background-position: center center;
+  background-size: cover; }
+  #home .header-container {
+    position: relative; }
+  #home nav {
+    background: transparent !important;
+    width: 100%;
+    z-index: 100; }
+    #home nav .nav-item {
+      text-transform: uppercase; }
+    #home nav .navbar-brand {
+      font-size: 2vmax;
+      font-style: italic;
+      text-transform: uppercase;
+      font-weight: 800; }
+  #home .navbar-collapse {
+    justify-content: flex-end; }
+  #home .row:last-child {
+    height: 100%; }
+  #home .col {
+    text-align: center; }
+  #home .titles {
+    text-align: center;
+    text-transform: uppercase;
+    left: 8%;
+    top: 30%;
+    position: absolute; }
+  #home h1 {
+    font-size: 6vmax; }
+  #home h2 {
+    font-size: 2vmax; }
+
 @media screen and (max-width: 576px) {
   #home {
-    background: url(../img/bg_mid.jpg) no-repeat top center/cover; } }
-@media screen and (min-width: 578px) {
-  #home {
-    background: url(../img/bg_mid.jpg) no-repeat top center/cover; } }
+    background: url(../img/bg_small.jpg) no-repeat; }
 
-#all-product .carousel-indicators {
-  position: static;
-  margin: 0; }
-  #all-product .carousel-indicators li {
-    text-indent: 0;
-    position: static; }
-#all-product li {
-  font-size: 16px;
-  padding: 10px 20px;
-  color: #9f9e9c;
-  width: 180px;
-  height: 45px;
-  border: 2px #9f9e9c solid;
-  border-radius: 15px;
-  margin: 100px 10px 0 10px;
-  text-align: center;
-  padding: 8px 0; }
-  #all-product li:hover {
-    background: #81ba00;
-    border: #81ba00;
-    color: #ffffff; }
-  #all-product li::before {
-    background: #515c36;
-    border: #81ba00;
-    color: #ffffff; }
-#all-product .active {
-  background: #9fa78d; }
-#all-product .nav {
-  margin-bottom: 40px; }
-#all-product span {
-  font-weight: 700; }
+  .header-container {
+    min-height: 326px; } }
+@media screen and (min-width: 576px) {
+  #home {
+    background: url(../img/bg_768.jpg) no-repeat; }
+
+  .header-container {
+    min-height: 438px; } }
+@media screen and (min-width: 768px) {
+  #home {
+    background: url(../img/bg_992.jpg) no-repeat;
+    min-height: 566px; }
+
+  .header-container {
+    min-height: 438px; } }
+@media screen and (min-width: 992px) {
+  #home {
+    background: url(../img/bg_1200.jpg) no-repeat;
+    min-height: 685px; }
+
+  .header-container {
+    min-height: 438px; } }
+@media screen and (min-width: 1200px) {
+  #home {
+    background: url(../img/bg_1500.jpg) no-repeat; }
+
+  .header-container {
+    min-height: 771px; } }
+@media screen and (min-width: 1500px) {
+  #home {
+    background: url(../img/bg_big.jpg) no-repeat; }
+
+  .header-container {
+    min-height: 1097px; } }
+@media screen and (max-width: 992px) {
+  .navbar-nav {
+    background: #ffffff;
+    z-index: 900; }
+    .navbar-nav .nav-item {
+      padding: 15px;
+      text-align: center;
+      border-bottom: 1px #7fbb00 solid; }
+      .navbar-nav .nav-item:last-child {
+        border: none; }
+      .navbar-nav .nav-item:hover {
+        background: #7fbb00; } }
+#all-product {
+  padding-bottom: 100px; }
+  #all-product .carousel-indicators {
+    position: static;
+    margin: 0; }
+    #all-product .carousel-indicators li {
+      text-indent: 0;
+      position: static; }
+    #all-product .carousel-indicators .active {
+      background: #9f9e9c;
+      color: #ffffff; }
+  #all-product li {
+    font-size: 16px;
+    padding: 10px 20px;
+    color: #9f9e9c;
+    width: 180px;
+    height: 45px;
+    border: 2px #9f9e9c solid;
+    border-radius: 15px;
+    margin: 100px 10px 0 10px;
+    text-align: center;
+    padding: 8px 0; }
+    #all-product li:hover {
+      background: #81ba00;
+      border: #81ba00;
+      color: #ffffff;
+      box-shadow: -5px 5px 10px 0px rgba(0, 0, 0, 0.5);
+      transform: scale(1.1); }
+  #all-product .nav {
+    margin-bottom: 40px; }
+  #all-product span {
+    font-weight: 700; }
 
 .product {
   text-align: center;
@@ -84,8 +130,31 @@
   border: 3px #ffffff solid;
   border-radius: 25px;
   position: relative;
-  height: 350px;
-  padding: 0; }
+  height: 300px;
+  padding: 0;
+  margin: 20px;
+  margin-bottom: 35px;
+  width: 100%; }
+  .product:hover {
+    border-radius: 25px;
+    box-shadow: 5px 7px 12px 1px rgba(0, 0, 0, 0.5);
+    transform: scale(1.1); }
+  .product .btn-group {
+    top: 25px;
+    border-radius: 20px;
+    box-shadow: 5px 7px 25px 1px rgba(0, 0, 0, 0.5);
+    z-index: 100; }
+    .product .btn-group .btn {
+      background: #ffffff;
+      border: 0;
+      color: #dedede;
+      display: none; }
+      .product .btn-group .btn:first-child {
+        border-radius: 20px 0 0 20px; }
+      .product .btn-group .btn:last-child {
+        border-radius: 0 20px 20px 0; }
+      .product .btn-group .btn:hover {
+        color: #7fbb00; }
   .product p {
     color: #535353;
     font-size: 20px;
@@ -108,5 +177,9 @@
     position: absolute;
     bottom: 0;
     width: 100%; }
+
+@media screen and (min-width: 768px) {
+  #all-product li {
+    width: 211px; } }
 
 /*# sourceMappingURL=style.css.map */
