--- a/app/sass/all-products.scss
+++ b/app/sass/all-products.scss
@@ -1,12 +1,21 @@
 #all-product{
+    padding-bottom: 100px;
+
     .carousel-indicators{
         position: static;
         margin: 0;
+        
         li{
             text-indent: 0;
             position: static;
         }
+
+        .active{
+            background: #9f9e9c;
+            color: #ffffff;
+        }
     }
+
     li{
         @extend %font;
         font-size: 16px;
@@ -24,19 +33,9 @@
             background: #81ba00;
             border: #81ba00;
             color: #ffffff;
+            box-shadow: -5px 5px 10px 0px rgba(0, 0, 0, 0.5);
+            transform: scale(1.1);
         }
-
-        &::before{
-            background: #515c36;
-            border: #81ba00;
-            color: #ffffff;
-        }
-
-
-    }
-
-    .active{
-        background: #9fa78d;
     }
 
     .nav{
@@ -54,8 +53,44 @@
     border: 3px #ffffff solid;
     border-radius: 25px;
     position: relative;
-    height: 350px;
+    height: 300px;
     padding: 0;
+    margin: 20px;
+    margin-bottom: 35px;
+    width: 100%;
+
+
+    &:hover{
+        border-radius: 25px;
+        box-shadow: 5px 7px 12px 1px rgba(0, 0, 0, 0.5);
+        transform: scale(1.1);
+    }
+
+    .btn-group{
+        top: 25px;
+        border-radius: 20px;
+        box-shadow: 5px 7px 25px 1px rgba(0, 0, 0, 0.5);
+        z-index: 100;
+
+        .btn{
+            background: #ffffff;
+            border: 0;
+            color: #dedede;
+            display: none;
+
+            &:first-child{
+                border-radius: 20px 0 0 20px;
+            }
+
+            &:last-child{
+                border-radius: 0 20px 20px 0;
+            }
+
+            &:hover{
+                color: #7fbb00;
+            }
+        }  
+    }
 
     p{
         @extend %font;
@@ -83,12 +118,17 @@
         bottom: 60px;
         text-align: center;
         width: 100%;
-       
     }
 
     .text{
         position: absolute;
         bottom: 0;
         width: 100%;
+    }
+}
+
+@media screen and (min-width: 768px){
+    #all-product li{
+        width: 211px;
     }
 }
