--- a/app/sass/header.scss
+++ b/app/sass/header.scss
@@ -1,73 +1,135 @@
 #home{
-    img{
+ background: url(../img/bg_big.jpg) no-repeat;
+   background-position: 50%;
+    width: 100%;
+    background-position: center center;
+    background-size: cover;
+    .header-container{
         position: relative;
     }
 
-    .container{
-        position: absolute;
-        top: 0;
-        left: 8%;
-    }
-
-    .menu{
-            margin: 0;
-            padding: 0;
-            display: block;
-                    
-        li{
-            float: left;
-            display: block;
-            margin: 0 20px;
-        }
-
-        a{
+    nav{
+        background: transparent !important;
+        width: 100%; 
+        z-index: 100;
+        .nav-item{
             @extend %font;
-            text-decoration: none;
             text-transform: uppercase;
         }
+
+        .navbar-brand{
+            @extend %font;
+            font-size: 2vmax;
+            font-style: italic;
+            text-transform: uppercase;
+            font-weight: 800;
+        }      
     }
 
-.hat{
-    width: 100%;
-    height: 60px; 
-    padding-top: 30px;
-}
+    .navbar-collapse{
+        justify-content: flex-end;
+    }
 
-.logo{
-    float: left;
+    .row:last-child{
+        height: 100%;
+    }
 
-    h3{
+    .col{
+        text-align: center;
+    }
+
+    .titles{
         @extend %font;
+        text-align: center;
         text-transform: uppercase;
+        left: 8%;
+        top: 30%;
+        position: absolute;
+    }
+
+    h1{ 
+        font-size: 6vmax;
+    }
+
+    h2{
+        font-size: 2vmax;
     }
 }
-
-nav{
-    float: right; 
-}
-
-
-
-.titles{
-    @extend %font;
-    text-align: center;
-    text-transform: uppercase;
-    margin-top: 235px;
-}
-
-h1{ 
-    font-size: 70px;
-    line-height: 84px;
-}
-
 
 @media screen and (max-width: 576px){
-    background: url(../img/bg_mid.jpg) no-repeat top center/cover;
+    #home{
+        background: url(../img/bg_small.jpg) no-repeat;
+        
+    }
+    .header-container{
+        min-height: 326px;
+    }
 }
 
-@media screen and (min-width: 578px){
-    background: url(../img/bg_mid.jpg) no-repeat top center/cover;
+@media screen and (min-width: 576px){
+    #home{
+        background: url(../img/bg_768.jpg) no-repeat;
+        
+    }
+    .header-container{
+        min-height: 438px;
+    }
 }
 
+@media screen and (min-width: 768px){
+    #home{
+        background: url(../img/bg_992.jpg) no-repeat;
+        min-height: 566px;
+    }
+    .header-container{
+        min-height: 438px;
+    }
+}
+
+@media screen and (min-width: 992px){
+    #home{
+        background: url(../img/bg_1200.jpg) no-repeat;
+        min-height: 685px;
+    }
+    .header-container{
+        min-height: 438px;
+    }
+}
+
+@media screen and (min-width: 1200px){
+    #home{
+        background: url(../img/bg_1500.jpg) no-repeat;
+    }
+    .header-container{
+        min-height: 771px;
+    }
+}
+
+@media screen and (min-width: 1500px){
+    #home{
+        background: url(../img/bg_big.jpg) no-repeat;
+    }
+    .header-container{
+        min-height: 1097px;
+    }
+}
+
+@media screen and (max-width: 992px){
+    .navbar-nav{
+        background: #ffffff ;
+        z-index: 900;
+        .nav-item{
+            padding: 15px;
+            text-align: center;
+            border-bottom: 1px #7fbb00 solid;
+            &:last-child{
+                border: none;
+            }
+            &:hover{
+                background: #7fbb00;
+                
+            }
+        }
+    }
 }
 
