--- a/app/sass/all-products.scss
+++ b/app/sass/all-products.scss
@@ -4,10 +4,13 @@
     .carousel-indicators{
         position: static;
         margin: 0;
+        padding-top: 100px;
         
         li{
             text-indent: 0;
             position: static;
+            margin-right: 20px;
+            margin-bottom: 20px;
         }
 
         .active{
@@ -25,7 +28,6 @@
         height: 45px;
         border: 2px #9f9e9c solid;
         border-radius: 15px;
-        margin: 100px 10px 0 10px;
         text-align: center;
         padding: 8px 0;
         
@@ -55,7 +57,7 @@
     position: relative;
     height: 300px;
     padding: 0;
-    margin: 20px;
+    margin: 23px;
     margin-bottom: 35px;
     width: 100%;
 
@@ -130,5 +132,11 @@
 @media screen and (min-width: 768px){
     #all-product li{
         width: 211px;
+    }
+}
+
+@media screen and (max-width: 992px){
+    .product{
+        width: 75%;
     }
 }
