--- a/app/sass/header.scss
+++ b/app/sass/header.scss
@@ -1,17 +1,18 @@
 #home{
- background: url(../img/bg_big.jpg) no-repeat;
-   background-position: 50%;
+    background: url(../img/bg_big.jpg) no-repeat;
+    background-position: 50%;
     width: 100%;
     background-position: center center;
     background-size: cover;
+
     .header-container{
-        position: relative;
+        display: flex;
+        flex-direction: column;
     }
 
     nav{
         background: transparent !important;
         width: 100%; 
-        z-index: 100;
         .nav-item{
             @extend %font;
             text-transform: uppercase;
@@ -40,11 +41,9 @@
 
     .titles{
         @extend %font;
-        text-align: center;
         text-transform: uppercase;
-        left: 8%;
-        top: 30%;
-        position: absolute;
+        margin: auto;
+        text-align: center;
     }
 
     h1{ 
@@ -89,7 +88,6 @@
 @media screen and (min-width: 992px){
     #home{
         background: url(../img/bg_1200.jpg) no-repeat;
-        min-height: 685px;
     }
     .header-container{
         min-height: 438px;
@@ -131,5 +129,7 @@
             }
         }
     }
+
+
 }
 
